load-tests/order_management_service/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-management-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bal.perf.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: order-managemen
                port:
                  number: 9098
  tls:
    - hosts:
        - "bal.perf.test"
